--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <!-- Product Card 5 -->
             <div class="product-card">
-                <a href="Raw Mango.html">
+                <a href="Raw mango.html">
                     <img src="Export pro img/raw mango.jpg" alt="Product 5" class="product-image">
                     <div class="product-info">
                         <h3>Raw Mango</h3>
