--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
         </div>
-    </section><br><br>
+    </section>
     <!-- image slider end -->
 
     <!--product section -->
